--- a/src/scss/_tempate.scss
+++ b/src/scss/_tempate.scss
@@ -45,7 +45,6 @@ body {
 
   &.phone-visible {
     top: 80px;
-    transition-delay: .1s;
   }
 }
 
